--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ setInterval(() => {
     "bcryptjs": "https://esm.sh/bcryptjs@^2.4.3",
     "@/App": "./App.tsx",
     "@react-pdf/renderer": "https://esm.sh/@react-pdf/renderer@^4.3.0",
-    "@vercel/analytics": "https://esm.sh/@vercel/analytics@^1.5.0"
+    "@vercel/analytics": "https://esm.sh/@vercel/analytics@^1.5.0",
+    "@vercel/analytics/": "https://esm.sh/@vercel/analytics@^1.5.0/"
   }
 }
 </script>
